# oxidrone

./: Cargo.toml  README.md  justfile
.github/workflows/: matek-h743-wing.yml  test-oxidrone-core.yml
boards/matek-h743-wing/: Cargo.toml  Embed.toml
boards/matek-h743-wing/.cargo/: config.toml
boards/matek-h743-wing/src/: main.rs
boards/matekh743/: Cargo.toml  build.rs  memory.x
boards/matekh743/.cargo/: config.toml
boards/matekh743/src/: main.rs  platform.rs
crates/oxidrone-core/: Cargo.toml  banner.txt
crates/oxidrone-core/src/: flight_control.rs  flight_controller.rs  lib.rs
crates/oxidrone-drivers/: Cargo.toml
crates/oxidrone-drivers/src/: dummy.rs  imu.rs  lib.rs
crates/oxidrone-drivers/src/imu/: invensense.rs
crates/oxidrone-hal/: Cargo.toml
crates/oxidrone-hal/src/: dummy.rs  imu.rs  lib.rs  platform.rs  scheduler.rs
crates/oxidrone-hal/src/scheduler/: cortex_m.rs
oxidrone-bin/: Cargo.toml  build.rs
oxidrone-bin/.cargo/: config.toml
oxidrone-bin/src/: bsp_matek743.rs  logger.rs  main.rs  rt_stm32h7xx.rs
