[workspace]
resolver = "2"
members = [
    "crates/oxidrone-core",
    "crates/oxidrone-drivers",
    "crates/oxidrone-hal",
    "oxidrone-bin",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0"
authors = ["Sven Rademakers <sven.rademakers@gmail.com>"]
repository = "https://github.com/svenrademakers/oxidrone"
homepage = "https://oxidrone.io"
keywords = ["drone", "flight-controller", "embedded", "async", "stm32"]
categories = ["embedded", "aerospace"]

[workspace.dependencies]
rtic = "2.2.0"
rtic-time = "2.0.1"
rtic-monotonics = "2.1.0"
panic-probe = "1.0"
usb-device = "0.3.2"
defmt = "1.0"
static_cell = "2.1.1"

embedded-hal = "1.0.0"

micromath = { version = "2.1", features = ["vector"] }
nalgebra = { version = "0.34", default-features = false, features = ["libm"] }
heapless = "0.8"
nb = "1.1"
fugit = "0.3.7"

serde = { version = "1.0", default-features = false }
postcard = "1.1"

oxidrone-core = { path = "crates/oxidrone-core" }
oxidrone-drivers = { path = "crates/oxidrone-drivers" }
oxidrone-hal = { path = "crates/oxidrone-hal" }
