[package]
name = "oxidrone-bin"
version = "0.1.0"
edition = "2024"

[dependencies]
oxidrone-core.workspace = true
oxidrone-hal.workspace = true
oxidrone-drivers.workspace = true

defmt.workspace = true
panic-probe.workspace = true
embedded-hal.workspace = true
rtic.workspace = true
rtic-monotonics.workspace = true
rtic-time.workspace = true
stm32h7xx-hal = { git = "https://github.com/stm32-rs/stm32h7xx-hal", branch = "eh-v1.0", optional = true }
cortex-m-rt = { version = "0.7", optional = true }
usb-device.workspace = true
static_cell.workspace = true

[features]
default = ["board-matekh743-mini"]

# runtime's
rt-stm32h7xx = [
  "dep:cortex-m-rt",
  "rtic/thumbv7-backend",
  "rtic-monotonics/stm32h743ag",
  "rtic-monotonics/stm32_tim2",
  "stm32h7xx-hal/stm32h743",
  "stm32h7xx-hal/rt",
  "stm32h7xx-hal/usb_hs",
]

# boards
board-matekh743-mini = ["rt-stm32h7xx"]
