[package]
name = "oxidrone-bin"
version = "0.1.0"
edition = "2024"

[dependencies]
oxidrone-core.workspace = true
oxidrone-hal.workspace = true
oxidrone-drivers.workspace = true

heapless.workspace = true
defmt.workspace = true
panic-probe.workspace = true
embedded-hal.workspace = true
rtic.workspace = true
rtic-monotonics.workspace = true
rtic-time.workspace = true
stm32h7xx-hal = { git = "https://github.com/stm32-rs/stm32h7xx-hal", branch = "eh-v1.0", optional = true }
cortex-m-rt = { version = "0.7", optional = true }
cortex-m = { version = "0.7.7", optional = true }
usb-device.workspace = true
static_cell.workspace = true
usbd-serial = "0.2.2"
critical-section.workspace = true
embassy-sync.workspace = true

[features]
default = ["board-matekh743-mini"]

usb_logger = [
    "panic-probe/print-defmt",
    "heapless/defmt-03",
    "usb-device/defmt",
    "embassy-sync/defmt",
    "rtic-monotonics/defmt",
]

# runtime's
rt-stm32h7xx = [
  "cortex-m/critical-section-single-core",
  "dep:cortex-m-rt",
  "rtic/thumbv7-backend",
  "rtic-monotonics/stm32h743ag",
  "rtic-monotonics/stm32_tim2",
  "stm32h7xx-hal/stm32h743v",
  "stm32h7xx-hal/rt",
  "stm32h7xx-hal/usb_hs",
]

# boards
board-matekh743-mini = ["rt-stm32h7xx" ]
