[package]
name = "matek-h743-wing"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
oxidrone-core = { workspace = true }
oxidrone-hal = { workspace = true }
oxidrone-drivers = { workspace = true }

defmt = { workspace = true }
defmt-rtt = { workspace = true }
panic-probe = { workspace = true }

[target.'cfg(target_arch = "arm")'.dependencies]
rtic = { workspace = true, features = ["thumbv7-backend"] }
stm32h7xx-hal = { version = "0.16", features = ["stm32h743", "rt"] }
