[package]
name = "oxidrone-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core flight controller logic for OxiDrone"
authors.workspace = true
repository.workspace = true

[dependencies]
nalgebra = { workspace = true }
micromath = { workspace = true }
heapless = { workspace = true }
embassy-executor = { workspace = true }
embassy-sync = { workspace = true }
embassy-futures = { workspace = true }
embedded-hal = { workspace = true }
embedded-hal-async = { workspace = true }
embedded-io-async = { workspace = true }
defmt = { workspace = true }
serde = { workspace = true, features = ["derive"] }
postcard = { workspace = true }
oxidrone-hal = { workspace = true }

