[package]
name = "oxidrone-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core controller logic for OxiDrone"
authors.workspace = true
repository.workspace = true

[dependencies]
nalgebra = { workspace = true }
micromath = { workspace = true }
heapless = { workspace = true }
embedded-hal = { workspace = true }
defmt = { workspace = true }
serde = { workspace = true, features = ["derive"] }
postcard = { workspace = true }
oxidrone-hal = { workspace = true }
fugit.workspace = true
usb-device.workspace = true
critical-section.workspace = true
embassy-sync.workspace = true
usbd-serial = "0.2.2"
